--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Sorting Visualizer",
-  "name": "Sorting Visualizer",
+  "short_name": "Sorting Animation",
+  "name": "Sorting Animation",
   "icons": [
   ],
   "start_url": ".",
